--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="container mt-5">
+<!-- <div class="container mt-5">
   <h1 class="text-primary">Hello, Angular 19 with Bootstrap 5!</h1>
   <button class="btn btn-success">Click Me</button>
-</div>
+</div> -->
+<app-notes></app-notes>
